--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
   <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
 
   <!-- Styles -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/line-awesome.min.css" />
-  <link rel="stylesheet" href="css/slick.css" />
+  <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
+  <link rel="stylesheet" href="deps/bootstrap-4.6.2-dist/css/bootstrap.min.css" />
+  <!-- <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css" /> -->
+  <!-- <link rel="stylesheet" href="css/line-awesome.min.css" /> -->
+  <link rel="stylesheet" href="deps/line-awesome-1.3.0/1.3.0/css/line-awesome.min.css" />
+  <!-- <link rel="stylesheet" href="css/slick.css" /> -->
+  <link rel="stylesheet" href="deps/slick-1.8.1/slick/slick.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/responsive.css" />
 
   <!-- Scripts -->
-  <script src="https://kit.fontawesome.com/c4adcf1386.js"></script>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/slick.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="https://kit.fontawesome.com/c4adcf1386.js"></script> -->
+  <script src="deps/fontawesome-free-6.5.1-web/js/fontawesome.min.js"></script>
+  <!-- <script src="js/jquery.min.js"></script> -->
+  <script src="deps/jquery/jquery-3.7.1.min.js"></script>
+  <!-- <script src="js/slick.js"></script> -->
+  <script src="deps/slick-1.8.1/slick/slick.min.js"></script>
+  <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
+  <script src="deps/bootstrap-4.6.2-dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script> -->
   <script src="js/ui.js"></script>
   <script src="js/main.js"></script>
-
-  <!-- Material Stuff -->
-  <script src="tsout/material.js"></script>
 </head>
 
 <body data-theme='light'>
