--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     </p>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
+  <script src="deps/darkmode-js/darkmode-js.min.js"></script>
   <script>
     var options = {
       bottom: '64px', // default: '32px'
