--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <span class="scroll-down">
           <a href="#events" class="btn btn-lg btn-primary mr-3 px-5">Events</a>
         </span>
-        <a href="tel:+91-9409279077" class="btn btn-lg">Contact us</a>
+        <a href="tel:+91-9409279077" class="btn btn-lg text-primary">Contact us</a>
       </div>
     </div>
   </section>
@@ -360,12 +360,14 @@
   <script src="deps/darkmode-js/darkmode-js.min.js"></script>
   <script>
     var options = {
-      bottom: '64px', // default: '32px'
-      right: '32px', // default: '32px'
+      // bottom: '64px', // default: '32px'
+      bottom: '5vh', // default: '32px'
+      // right: '32px', // default: '32px'
+      right: '3vw', // default: '32px'
       left: 'unset', // default: 'unset'
-      time: '0.5s', // default: '0.3s'
+      time: '0.1s', // default: '0.3s'
       mixColor: '#fff', // default: '#fff'
-      backgroundColor: '#fff',  // default: '#fff'
+      backgroundColor: '#ddd',  // default: '#fff'
       buttonColorDark: '#100f2c',  // default: '#100f2c'
       buttonColorLight: '#fff', // default: '#fff'
       saveInCookies: true, // default: true,
@@ -373,7 +375,7 @@
       autoMatchOsTheme: true// default: true
     }
     const darkmode = new Darkmode(options);
-    darkmode.showWidget();
+    window.addEventListener('load', () => { console.log('Loading Darkmode widget...'); darkmode.showWidget(); console.log('Loaded Darkmode widget!'); });
   </script>
 </body>
 
