Theme is no longer os-dependent

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       buttonColorLight: '#fff', // default: '#fff'
       saveInCookies: true, // default: true,
       label: '🌓', // default: ''
-      autoMatchOsTheme: true// default: true
+      autoMatchOsTheme: false // default: true
     }
     const darkmode = new Darkmode(options);
     window.addEventListener('load', () => { console.log('Loading Darkmode widget...'); darkmode.showWidget(); console.log('Loaded Darkmode widget!'); });
