Removed the tel links.

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           <li class="nav-item scroll-down">
             <a class="nav-link" href="#about">ABOUT US</a>
           </li>
-          <li class="">
+          <!-- <li class="">
             <a class="ml-lg-3 btn btn-outline-primary d-none d-lg-block" href="tel:+91-9409279077">Contact us</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
@@ -92,7 +92,7 @@
         <span class="scroll-down">
           <a href="#events" class="btn btn-lg btn-primary mr-3 px-5">Events</a>
         </span>
-        <a href="tel:+91-9409279077" class="btn btn-lg text-primary">Contact us</a>
+        <!-- <a href="tel:+91-9409279077" class="btn btn-lg text-primary">Contact us</a> -->
       </div>
     </div>
   </section>
