--- a/index.html
+++ b/index.html
@@ -31,25 +31,7 @@
   <script src="deps/bootstrap-4.6.2-dist/js/bootstrap.bundle.min.js"></script>
   <!-- <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script> -->
   <script src="deps/darkmode-js/darkmode-js.min.js"></script>
-  <script>
-    var options = {
-      // bottom: '64px', // default: '32px'
-      bottom: '5vh', // default: '32px'
-      // right: '32px', // default: '32px'
-      right: '3vw', // default: '32px'
-      left: 'unset', // default: 'unset'
-      time: '0.1s', // default: '0.3s'
-      mixColor: '#fff', // default: '#fff'
-      backgroundColor: '#ddd',  // default: '#fff'
-      buttonColorDark: '#100f2c',  // default: '#100f2c'
-      buttonColorLight: '#fff', // default: '#fff'
-      saveInCookies: true, // default: true,
-      label: '🌓', // default: ''
-      autoMatchOsTheme: false // default: true
-    }
-    const darkmode = new Darkmode(options);
-    window.addEventListener('load', () => { console.log('Loading Darkmode widget...'); darkmode.showWidget(); console.log('Loaded Darkmode widget!'); });
-  </script>
+
   <script src="js/ui.js"></script>
   <script src="js/main.js"></script>
 </head>
@@ -230,11 +212,30 @@
 
   <footer>
     <p class="text-center">
-      &copy; copyright 2020. All rights reserved for
+      &copy; 2024 All rights reserved for
       <span class="back-to-top">
         Developer Student clubs - Navrachna University</span>
     </p>
   </footer>
+  <script>
+    var options = {
+      // bottom: '64px', // default: '32px'
+      bottom: '5vh', // default: '32px'
+      // right: '32px', // default: '32px'
+      right: '3vw', // default: '32px'
+      left: 'unset', // default: 'unset'
+      time: '0.1s', // default: '0.3s'
+      mixColor: '#fff', // default: '#fff'
+      backgroundColor: '#fff',  // default: '#fff'
+      buttonColorDark: '#100f2c',  // default: '#100f2c'
+      buttonColorLight: '#fff', // default: '#fff'
+      saveInCookies: true, // default: true,
+      label: '🌓', // default: ''
+      autoMatchOsTheme: false // default: true
+    }
+    const darkmode = new Darkmode(options);
+    window.addEventListener('load', () => { console.log('Loading Darkmode widget...'); darkmode.showWidget(); console.log('Loaded Darkmode widget!'); });
+  </script>
 </body>
 
 </html>
