--- a/index-copy.html
+++ b/index-copy.html
@@ -12,7 +12,7 @@
   <!-- Styles -->
   <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
   <!-- <link rel="stylesheet" href="deps/bootstrap-4.6.2-dist/css/bootstrap.min.css" /> -->
-  <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="deps/bootstrap-5.3.2-dist/css/bootstrap.min.css" />
   <!-- <link rel="stylesheet" href="css/line-awesome.min.css" /> -->
   <link rel="stylesheet" href="deps/line-awesome-1.3.0/1.3.0/css/line-awesome.min.css" />
   <!-- <link rel="stylesheet" href="css/slick.css" /> -->
@@ -29,7 +29,7 @@
   <script src="deps/slick-1.8.1/slick/slick.min.js"></script>
   <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
   <!-- <script src="deps/bootstrap-4.6.2-dist/js/bootstrap.bundle.min.js"></script> -->
-  <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="deps/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js" defer></script>
   <script src="deps/darkmode-js/darkmode-js.min.js"></script>
 
   <script src="js/ui.js"></script>
@@ -38,16 +38,16 @@
 
 <body data-theme='light'>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top ps-3 pe-2">
       <div style="max-width: 300px;">
-        <img src="assets/images/logo/logo-full.png" alt="" class="img-fluid" />
+        <img src="assets/images/logo/logo-full.png" alt="" class=" img-fluid" />
       </div>
-      <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarMenu">
+      <button class="navbar-toggler ms-auto" type="button" data-toggle="collapse" data-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarMenu">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav m1-0 ms-auto">
           <li class="nav-item back-to-top active">
             <a class="nav-link" href="#">HOME</a>
           </li>
@@ -58,7 +58,7 @@
             <a class="nav-link" href="#about">ABOUT US</a>
           </li>
           <!-- <li class="">
-            <a class="ml-lg-3 btn btn-outline-primary d-none d-lg-block" href="tel:+91-9409279077">Contact us</a>
+            <a class="ms-lg-3 btn btn-outline-primary d-none d-lg-block" href="tel:+91-9409279077">Contact us</a>
           </li> -->
         </ul>
       </div>
@@ -72,7 +72,7 @@
       <h3>Navrachana University</h3>
       <div class="mt-4">
         <span class="scroll-down">
-          <a href="#events" class="btn btn-lg btn-primary mr-3 px-5">Events</a>
+          <a href="#events" class="btn btn-lg btn-primary me-3 px-5">Events</a>
         </span>
         <!-- <a href="tel:+91-9409279077" class="btn btn-lg text-primary">Contact us</a> -->
       </div>
