--- a/index-copy.html
+++ b/index-copy.html
@@ -87,8 +87,10 @@
     <div class="section-body mt-5">
       <div class="events-slider-bg">
         <div class="container">
-          <div class="row">
-
+          <div class="row flex-row-reverse">
+            <div class="col-xl-9 col-lg-10 offset-xl-1 order-lg-12">
+              <div class="events-slider"></div>
+            </div>
             <div class="col-lg-2 align-self-center order-lg-11">
               <div class="container">
                 <h3 class="text-light">EVENTS / COMPETITIONS</h3>
@@ -110,9 +112,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-9 col-lg-10 offset-xl-1 order-lg-12">
-              <div class="events-slider"></div>
-            </div>
+
           </div>
         </div>
       </div>
