--- a/index-copy.html
+++ b/index-copy.html
@@ -36,7 +36,10 @@
   <script src="js/main.js"></script>
 </head>
 
-<body data-bs-theme='dark' class="position-relative">
+<body data-bs-theme='auto' class="position-relative">
+  <button type="button" class="fab" onclick="toggleBsColorMode();">
+    🌑
+  </button>
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top ps-3 pe-2">
       <div style="max-width: 300px;">
