--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <!-- Styles -->
   <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
-  <link rel="stylesheet" href="deps/bootstrap-4.6.2-dist/css/bootstrap.min.css" />
-  <!-- <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css" /> -->
+  <!-- <link rel="stylesheet" href="deps/bootstrap-4.6.2-dist/css/bootstrap.min.css" /> -->
+  <link rel="stylesheet" href="deps/bootstrap-5.3.2-dist/css/bootstrap.min.css" />
   <!-- <link rel="stylesheet" href="css/line-awesome.min.css" /> -->
   <link rel="stylesheet" href="deps/line-awesome-1.3.0/1.3.0/css/line-awesome.min.css" />
   <!-- <link rel="stylesheet" href="css/slick.css" /> -->
@@ -28,26 +28,29 @@
   <!-- <script src="js/slick.js"></script> -->
   <script src="deps/slick-1.8.1/slick/slick.min.js"></script>
   <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
-  <script src="deps/bootstrap-4.6.2-dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script> -->
+  <!-- <script src="deps/bootstrap-4.6.2-dist/js/bootstrap.bundle.min.js"></script> -->
+  <script src="deps/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js" defer></script>
   <script src="deps/darkmode-js/darkmode-js.min.js"></script>
 
   <script src="js/ui.js"></script>
   <script src="js/main.js"></script>
 </head>
 
-<body data-theme='light'>
+<body data-bs-theme='auto' class="position-relative">
+  <button type="button" class="fab" onclick="toggleBsColorMode();">
+    🌑
+  </button>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top ps-3 pe-2">
       <div style="max-width: 300px;">
-        <img src="assets/images/logo/logo-full.png" alt="" class="img-fluid" />
+        <img src="assets/images/logo/logo-full.png" alt="" class=" img-fluid" />
       </div>
-      <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarMenu">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarMenu">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav m1-0 ms-auto">
           <li class="nav-item back-to-top active">
             <a class="nav-link" href="#">HOME</a>
           </li>
@@ -58,7 +61,7 @@
             <a class="nav-link" href="#about">ABOUT US</a>
           </li>
           <!-- <li class="">
-            <a class="ml-lg-3 btn btn-outline-primary d-none d-lg-block" href="tel:+91-9409279077">Contact us</a>
+            <a class="ms-lg-3 btn btn-outline-primary d-none d-lg-block" href="tel:+91-9409279077">Contact us</a>
           </li> -->
         </ul>
       </div>
@@ -68,11 +71,11 @@
     style="background-image: url('assets/images/hero/hero-bg.png');">
     <div class="logo">
       <img src="assets/images/logo/logo.png" alt="logo" class="img-fluid" />
-      <h1>Developer Student Clubs</h1>
-      <h3>Navrachana University</h3>
+      <h1 class="text-body">Developer Student Clubs</h1>
+      <h3 class="text-secondary">Navrachana University</h3>
       <div class="mt-4">
         <span class="scroll-down">
-          <a href="#events" class="btn btn-lg btn-primary mr-3 px-5">Events</a>
+          <a href="#events" class="btn btn-lg btn-primary me-3 px-5">Events</a>
         </span>
         <!-- <a href="tel:+91-9409279077" class="btn btn-lg text-primary">Contact us</a> -->
       </div>
@@ -87,7 +90,7 @@
     <div class="section-body mt-5">
       <div class="events-slider-bg">
         <div class="container">
-          <div class="row">
+          <div class="row flex-row-reverse">
             <div class="col-xl-9 col-lg-10 offset-xl-1 order-lg-12">
               <div class="events-slider"></div>
             </div>
@@ -112,6 +115,7 @@
                 </div>
               </div>
             </div>
+
           </div>
         </div>
       </div>
@@ -167,7 +171,7 @@
             </div>
             <div class="card-body text-center">
               <h1 class="card-title">Connect</h1>
-              <p class=" card-text">
+              <p class=" card-text text-body">
                 Meet other students on campus interested in developer
                 technologies. All are welcome, including those with diverse
                 backgrounds and different majors.
@@ -182,7 +186,7 @@
             </div>
             <div class="card-body text-center">
               <h1 class="card-title">Learn</h1>
-              <p class=" card-text">
+              <p class=" card-text text-body">
                 Learn about a wide range of technical topics where new skills
                 are gained through hands-on workshops, in-person training and
                 project building activities.
@@ -197,7 +201,7 @@
             </div>
             <div class="card-body text-center">
               <h1 class="card-title">Grow</h1>
-              <p class=" card-text">
+              <p class=" card-text text-body">
                 Apply your new learnings and connections to build great
                 solutions for local problems. Advance your skills, career and
                 network. Give back to your community by helping others learn
@@ -217,7 +221,7 @@
         Developer Student clubs - Navrachna University</span>
     </p>
   </footer>
-  <script>
+  <!-- <script>
     var options = {
       // bottom: '64px', // default: '32px'
       bottom: '5vh', // default: '32px'
@@ -235,7 +239,7 @@
     }
     const darkmode = new Darkmode(options);
     window.addEventListener('load', () => { console.log('Loading Darkmode widget...'); darkmode.showWidget(); console.log('Loaded Darkmode widget!'); });
-  </script>
+  </script> -->
 </body>
 
 </html>
