--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
   <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
   <!-- <script src="deps/bootstrap-4.6.2-dist/js/bootstrap.bundle.min.js"></script> -->
   <script src="deps/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js" defer></script>
-  <script src="deps/darkmode-js/darkmode-js.min.js"></script>
+  <!-- <script src="deps/darkmode-js/darkmode-js.min.js"></script> -->
 
   <script src="js/ui.js"></script>
   <script src="js/main.js"></script>
 </head>
 
 <body data-bs-theme='auto' class="position-relative">
-  <button type="button" class="fab" onclick="toggleBsColorMode();">
+  <button type="button" id="theme-fab" class="fab" onclick="toggleBsColorMode();">
     🌑
   </button>
   <header>
