Fixed references to GDSC

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="col-md-6 align-self-center">
           <div class="section-header">
             <p class="m-0">WHAT IS</p>
-            <h1>Google's DSC?</h1>
+            <h1>Google's GDSC?</h1>
             <img src="assets/images/extra/wave.png" />
           </div>
           <div class="section-body mt-3">
@@ -141,7 +141,7 @@
               for students interested in Google developer technologies.
               Students from all undergraduate or graduate programs with an
               interest in growing as a developer are welcome. By joining a
-              DSC, students grow their knowledge in a peer-to-peer learning
+              GDSC, students grow their knowledge in a peer-to-peer learning
               environment and build solutions for local businesses and their
               community.
             </p>
@@ -160,7 +160,7 @@
   <section id="vision" class="vision">
     <div class="section-header text-center">
       <p>VISION OF</p>
-      <h1 class="m-0">DSC NUV</h1>
+      <h1 class="m-0">GDSC NUV</h1>
       <img src="assets/images/extra/wave.png" />
     </div>
     <div class="section-body container mt-5">
