Updated description and fixed some layout

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
       <div class="row">
         <div class="col-md-6 align-self-center">
           <div class="section-header">
-            <p class="m-0">WHAT IS</p>
-            <h1>Google's GDSC?</h1>
+            <!-- <p class="m-0">WHAT IS</p> -->
+            <h1>Google Deveolper Student Club</h1>
             <img src="assets/images/extra/wave.png" />
           </div>
           <div class="section-body mt-3">
@@ -137,13 +137,13 @@
             </h5>
             <br />
             <p>
-              Developer Student Clubs are university based community groups
-              for students interested in Google developer technologies.
-              Students from all undergraduate or graduate programs with an
-              interest in growing as a developer are welcome. By joining a
-              GDSC, students grow their knowledge in a peer-to-peer learning
-              environment and build solutions for local businesses and their
-              community.
+              Google Developer Student Clubs are university based community groups for students interested in Google
+              developer
+              technologies. Students from all undergraduate or graduate programs with an interest in growing as a
+              developer are
+              welcome. By joining a GDSC, students grow their knowledge in a peer-to-peer learning environment and build
+              solutions for
+              local businesses and their community.
             </p>
           </div>
         </div>
@@ -164,7 +164,7 @@
       <img src="assets/images/extra/wave.png" />
     </div>
     <div class="section-body container mt-5">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-sm-6 col-lg-4 mb-3">
           <div class="card text-center py-2">
             <div class="image px-5 pt-4">
@@ -180,7 +180,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-lg-4 mb-3">
+        <div class="col-sm-6 col-lg-4 mb-3 h-100">
           <div class="card text-center py-2">
             <div class="profile-pic px-5 pt-4">
               <img src="assets/images/vision/2.svg" class="card-img-top img-fluid" />
