--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
 
   <script src="js/ui.js"></script>
   <script src="js/main.js"></script>
+
+  <style>
+    [data-bs-theme=dark] .logo-light {
+      display: none;
+    }
+
+    [data-bs-theme=light] .logo-dark {
+      display: none;
+    }
+  </style>
 </head>
 
 <body data-bs-theme='auto' class="position-relative">
@@ -44,7 +54,8 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top ps-3 pe-2">
       <div style="max-width: 300px;">
-        <img src="assets/images/logo/logo-full.png" alt="" class=" img-fluid" />
+        <img src="assets/images/logo/gdsc_black_full.png" alt="" class="logo-light img-fluid" />
+        <img src="assets/images/logo/gdsc_white_full.png" alt="" class="logo-dark img-fluid" />
       </div>
       <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
@@ -72,7 +83,7 @@
     style="background-image: url('assets/images/hero/hero-bg.png');">
     <div class="logo">
       <img src="assets/images/logo/logo.png" alt="logo" class="img-fluid" />
-      <h1 class="text-body">Developer Student Clubs</h1>
+      <h1 class="text-body">Google Developer Student Clubs</h1>
       <h3 class="text-secondary">Navrachana University</h3>
       <div class="mt-4">
         <span class="scroll-down">
