Fixed GDSC reference

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <p class="text-center">
       &copy; 2024 All rights reserved for
       <span class="back-to-top">
-        Developer Student clubs - Navrachna University</span>
+        Google Developer Student clubs - Navrachna University</span>
     </p>
   </footer>
   <!-- <script>
